--- a/pom.xml
+++ b/pom.xml
@@ -264,7 +264,7 @@
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
-					<locales>en,es</locales>
+					<locales>es</locales>
 				</configuration>
 			</plugin>
 		</plugins>
