--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-pages-artifact@v3
       with:
-        path: ./target/site
+        path: ./target/site/es
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
