--- a/pom.xml
+++ b/pom.xml
@@ -126,8 +126,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -264,7 +264,8 @@
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
-					<locales>es</locales>
+					<locales>default,es</locales>
+			        <port>9000</port>
 				</configuration>
 			</plugin>
 		</plugins>
